name:                vector-conduit
version:             0.5.0.0
synopsis:            Conduit utilities for vectors
description:         Provides sources and sinks for vectors.
license:             MIT
author:              Jared Hance
maintainer:          jaredhance@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Conduit.Vector
  build-depends:
    base >= 4.0 && < 5.0,
    conduit >= 0.5,
    primitive >= 0.4,
    vector >= 0.9,
    mtl >= 1.0

test-suite vector-conduit-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test/
  build-depends:
    vector-conduit,
    base >= 4.0 && < 5.0,
    conduit >= 0.5,
    primitive >= 0.4,
    test-framework >= 0.6,
    test-framework-hunit >= 0.2,
    test-framework-quickcheck2 >= 0.2,
    QuickCheck >= 2.4,
    HUnit >= 1.2 && < 1.3,
    vector >= 0.9

source-repository head
  type: git
  location: git://github.com/jhance/vector-conduit.git
